--- a/front-end/src/pages/payment.css
+++ b/front-end/src/pages/payment.css
@@ -130,6 +130,12 @@ h2 {
   transition: background-color 0.3s ease;
 }
 
+.error-message {
+  color: red;
+  font-size: 14px;
+  margin-top: 5px;
+}
+
 .pay:hover {
   background-color: #45a049;
 }
