diplaying the profile picture

--- a/front-end/src/pages/homePage.css
+++ b/front-end/src/pages/homePage.css
@@ -23,8 +23,8 @@
 .logo {
   display: inline-flex;
   align-items: center;
-  height: fit-content;
-  width: fit-content;
+  height: 5%;
+  width: 100%;
   margin: 20% 0% 0%;
   position: relative;
   justify-self: right;
@@ -54,6 +54,7 @@
   font-weight: bold;
   padding-left: 1.5%;
   align-items: left;
+  width: 100%;
 }
 
 .slogan {
@@ -151,7 +152,8 @@
 .menu {
   display:contents;
   align-items: center;
-  width: 30%;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .login-icon {
@@ -173,6 +175,7 @@
   padding: 150px 0px 0px 10px;
 
 }
+
 .body-1{
   display: inline-block;
   align-items: center;
@@ -185,9 +188,11 @@
 }
 
 .body-2 {
-  display: block;
-  margin-top: 2.5%;
-  padding-left: 2.5%;
+  display: inline-block;
+  align-items: center;
+  height: fit-content;
+  width: 90%;
+  padding: 8% 2% 0% 20%;
   position: relative;
 }
 
@@ -221,7 +226,7 @@
   font-weight: bold;
   font-size: x-large;
   padding: 10px 10px 0 0;
-  width: 70%;
+  width: 50%;
 }
 
 .note3 {
@@ -301,23 +306,34 @@
 
 /*service list*/
 .class{
-  padding-top: 30%;
+  padding-top: 110px;
 }
 .list-header {
   font-size: 30px;
   color: #101111;
-  margin-bottom: 25px;
-  margin-left: 30px;
+  margin-top:100px ;
+  text-align: center;
 }
 
 ul {
   list-style-type: none;
   padding: 0;
+  display: inline-block;
+  align-items: center;
+  height: fit-content;
+  width: 100%;
+  position: relative;
 }
 
 li {
   margin-bottom: 10px;
   width: 100%;
+  text-align: center;
+  display: inline-block;
+  align-items: center;
+  height: fit-content;
+  width: 100%;
+  position: relative;
 }
 
 .class button {
@@ -343,7 +359,7 @@ li {
   background-image: linear-gradient(to right, rgb(95, 174, 230), rgb(43, 99, 147));
   margin-top: 50px;
   position: absolute;
-  top: 30%;
+  top: 190px;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
@@ -365,10 +381,10 @@ li {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  padding-top: 51%;
+  height: fit-content;
+  width: 100%;
+  margin-top: 253px;
   position: fixed;
-
 
 }
 
@@ -393,21 +409,6 @@ li {
   background-image: linear-gradient(to right, rgb(3, 55, 100), rgb(95, 174, 230));
 }
 
-.bodyy .form-container {
-  max-width: 550px;
-  padding-top: 30px;
-  padding-left: 80px;
-  padding-right: 80px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  background-color: #e5e4e0;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  border-radius: 15px;
-  position: relative;
-
-}
 
 .bodyy button {
   background-image: linear-gradient(to right, rgb(95, 174, 230), rgb(43, 99, 147));
@@ -436,111 +437,8 @@ li {
 
 }
 
-@media (min-width: 768px) {
-  .logo {
-    display: flex;
-    align-items: center;
-    height: fit-content;
-    width: 30%;
-    margin: 2%;
-    position: absolute;
-  
-  }
-  .logo img {
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    transition: transform 0.3s;
-  }
-  
-  .body-1{
-    display: inline-flex;
-    align-items: center;
-    height: fit-content;
-    width: fit-content;
-    margin: 2% 0% 0% 2%;
-    position: relative;
-    justify-self: right;
-    
-  }
 
-.body-2{
-  white-space:inherit;
-  width: 100%;
-  display: flex;
-}
-  .side-one {
-    width: 90%;
-    flex: 0 0 40%;
-    max-width: none;
-  }
-
-  .side-two {
-    width: 100%;
-    flex: 0 0 60%;
-    padding-left: 180px;
-    padding-top: 30px;
-  }
-
-  .msg {
-    width: 30%;
-    max-width: none;
-  }
-  .nav {
-    display:inline-flex;
-    align-items:baseline;
-    justify-content: flex-start;
-    margin: 100px 10px 0px 600px ;
-  
-  }
-
-  .nav-item {
-    margin-right: 0px;
-
-  }
-
-
-  /*about us page*/
-  .about-us-heading {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    padding-top: 13%;
-    padding-left: 10%;
-  }
-  
-  .about-us-description {
-    padding: 0%;
-    padding-left: 3%;
-  }
-  
-  /*contact Us*/
-  .contactus{
-    padding:0% 0% 0% 4%;
-  }
-
-  /*service list*/
-  .class{
-    padding-top: 10%;
-  }
-  
-  /*service Number*/
-  .bodyy {
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    padding-top: 19%;
-    padding-left: 32%;
-    position: fixed;
-  
-  
-  }
-
-}
-
+/* login */
 .errorMessage {
   color: red;
   font-size: 14px;
@@ -555,15 +453,11 @@ li {
 
 .body .form {
   width: 400px;
-  height: 500px;
+  height: 400px;
   display: block;
-  padding-top: 10px;
   background-color: #e5e4e0;
-
-  margin: 150px auto;
-  margin-top: 0px;
-  padding-bottom: 15px;
   border-radius: 10px;
+  padding: 20px;
 }
 
 
@@ -601,7 +495,7 @@ li {
   width: 270px;
   height: 50px;
   border: 1px solid #dee0e4;
-  padding: 0 15px;
+  padding: 10px 15px;
   border-radius: 5px;
 }
 
@@ -609,7 +503,7 @@ li {
   width: 80%;
   padding: 15px;
   margin-top: 30px;
-  margin-left: 40px;
+  margin-left: 30px;
   margin-bottom: 20px;
   align-items: center;
   background-image: linear-gradient(to right, rgb(3, 55, 100), rgb(95, 174, 230));
@@ -636,20 +530,21 @@ li {
   display: block;
 }
 
+/* registration */
+
 .user-body {
+  height: 100vh;
   display: flex;
-  height: 70vh;
   justify-content: center;
   align-items: center;
   background-color: white;
-  padding: 10px;
-
 }
 
 .user-body form {
 
+  display: inline-block;
   max-width: 700px;
-
+  min-width: 500px;
   width: 100%;
   background-color: #e5e4e0;
   padding: 25px 30px;
@@ -657,7 +552,7 @@ li {
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-  margin-top: 10px;
+  margin-top: 0px;
 }
 
 .user-body .form .title {
@@ -758,13 +653,6 @@ li {
 }
 
 
-
-.user-body {
-  background-color: white;
-  padding: 20px;
-  border-radius: 5px;
-}
-
 .title {
   font-size: 20px;
   font-weight: bold;
@@ -835,19 +723,6 @@ li {
 }
 
 
-.list-header {
-  font-size: 30px;
-  color: #101111;
-  margin-bottom: 15px;
-  margin-left: 20%;
-  padding-top: 60px;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
 li {
   margin-bottom: 10px;
   width: 60%;
@@ -872,4 +747,92 @@ li {
 }
 
 
- 
+@media (min-width: 800px) {
+  .logo {
+    display: flex;
+    align-items: center;
+    height: fit-content;
+    width: 60%;
+    margin: 2%;
+    position: absolute;
+  
+  }
+  .logo img {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    transition: transform 0.3s;
+  }
+  
+  .body-1{
+    display: inline-flex;
+    align-items: center;
+    height: fit-content;
+    width: '90%';
+    margin: 2% 0% 0% 2%;
+    position: relative;
+    justify-self: right;
+    
+  }
+
+.body-2 {
+  white-space:inherit;
+  margin: 0%;
+  display: inline-flex;
+  height: fit-content;
+  width: 95%;
+  padding: 0% 0% 0% 0%;
+  position: absolute;
+}
+  .side-one {
+    width: 50%;
+    flex: 0 0 40%;
+    max-width: none;
+  }
+
+  .side-two {
+    width: 50%;
+    padding-left: 3%;
+    padding-top: 3%;
+  }
+
+  .msg {
+    width: 30%;
+    max-width: none;
+  }
+  .nav {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    padding: 100px 20% 10% 4%;
+    width: 100%;
+    position: absolute;
+}
+
+  .nav-item {
+    justify-content: space-evenly;
+
+  }
+
+
+  /*about us page*/
+  .about-us-heading {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    padding-top: 13%;
+    padding-left: 10%;
+  }
+  
+  .about-us-description {
+    padding: 0%;
+    padding-left: 3%;
+  }
+  
+  /*contact Us*/
+  .contactus{
+    padding:0% 0% 0% 4%;
+  }
+  
+
+}
