--- a/front-end/src/pages/homePage.css
+++ b/front-end/src/pages/homePage.css
@@ -287,8 +287,7 @@
 .about-us-heading {
   font-size: 24px;
   font-weight: bold;
-  margin-bottom: 10px;
-  padding-top: 50%;
+  padding-top: 200px;
   padding-left: 35%;
 }
 
@@ -803,8 +802,8 @@ li {
   .nav {
     display: flex;
     align-items: baseline;
-    justify-content: space-between;
-    padding: 100px 20% 10% 4%;
+    justify-content:flex-end;
+    padding: 100px 10% 10% 40%;
     width: 100%;
     position: absolute;
 }
@@ -820,7 +819,7 @@ li {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 10px;
-    padding-top: 13%;
+    padding-top: 200px;
     padding-left: 10%;
   }
   
